--- a/templates/files-in-same-commit-graph.html
+++ b/templates/files-in-same-commit-graph.html
@@ -47,7 +47,7 @@
 <span id="files-in-the-same-commit"></span>
 <script>
 
-const graph = {
+const filesInTheSameCommitGraph = {
 /*data_placeholder*/
     "nodes": [
         {"name": "/src/MyArtifactRepository.java", "group": 1},
@@ -140,7 +140,7 @@ var projectName = /*project_name_placeholder*/"some project"/*project_name_place
 var graphName = "Files in the same commit";
 
 
-createForcesGraphOn("files-in-the-same-commit", graph, projectName);
+createForcesGraphOn("files-in-the-same-commit", filesInTheSameCommitGraph, projectName);
 
 function createForcesGraphOn(elementId, graph, projectName) {
     function QuickFind(size) {
@@ -467,10 +467,10 @@ function createForcesGraphOn(elementId, graph, projectName) {
                 .style("top", svgPos.offsetTop + 3 + "px")
                 .html(nodesByGroup[1].map(function (d) { return showLongFileNames ? d.name : dropPath(d.name); }).sort().join("<br/>"))
                 .style("opacity", (nodesByGroup[1].length > 0 ? 1 : 0));
-        var pos = selectedNodesLabel[0][0].getBoundingClientRect();
+        var pos = selectedNodesLabel[0][0];
         selectedNodesLabel2
                 .style("left", svgPos.offsetLeft + 3 + "px")
-                .style("top", pos.top + pos.height + 3 + "px")
+                .style("top", pos.offsetTop + pos.offsetHeight + 3 + "px")
                 .html(nodesByGroup[2].map(function (d) { return showLongFileNames ? d.name : dropPath(d.name); }).sort().join("<br/>"))
                 .style("opacity", (nodesByGroup[2].length > 0 ? 1 : 0));
     }
