got rid of d3.v2

--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -7,8 +7,7 @@
         background: #f2f2f2;
     }
 </style>
-<!--TODO diff d3.v2.min-2.js with existing d3 lib-->
-<script src="d3.v2.min-2.js"></script>
+<script src="d3.v3.min.js"></script>
 <script src="d3.layout.cloud.js"></script>
 <head><title>Commit messages word cloud</title></head>
 <body>
