--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -2,19 +2,24 @@
 <meta charset="utf-8">
 <style>
     body {
+        background: #f2f2f2;
+    }
+    #commit-word-cloud {
         font: 11px sans-serif;
         font-family: 'Lucida Grande','Calibri',Helvetica,Arial,sans-serif;
-        background: #f2f2f2;
+    }
+    #commit-word-cloud text {
+        cursor: default;
     }
 </style>
 <script src="d3.v3.min.js"></script>
 <script src="d3.layout.cloud.js"></script>
 <head><title>Commit messages word cloud</title></head>
 <body>
-    <span id="wordCloud"></span>
+    <span id="commit-word-cloud"></span>
 </body>
 <script>
-    var data = /*data_placeholder*/
+    var commitWordCloudData = /*data_placeholder*/
             {"words": [
                 {"text": "kent", "size": 188},
                 {"text": "test", "size": 177},
@@ -197,9 +202,9 @@
 /*data_placeholder*/;
     var projectName = /*project_name_placeholder*/"junit"/*project_name_placeholder*/;
 
-    createWordCloud("wordCloud", projectName);
+    createWordCloud("commit-word-cloud", commitWordCloudData, projectName);
 
-    function createWordCloud(elementId, projectName) {
+    function createWordCloud(elementId, data, projectName) {
         var solidFill = d3.scale.category10();
         var mixedFill = d3.scale.category20();
         var width = 1000;
