--- a/templates/files-in-same-commit-graph.html
+++ b/templates/files-in-same-commit-graph.html
@@ -41,7 +41,7 @@
         pointer-events: none;
     }
 </style>
-<head><title>Files in the same commit</title></head>
+<head><title>Files changed in the same commit</title></head>
 <body>
 <script src="d3.v3.min.js"></script>
 <span id="files-in-the-same-commit"></span>
@@ -137,7 +137,7 @@ const filesInTheSameCommitGraph = {
 /*data_placeholder*/
 };
 var projectName = /*project_name_placeholder*/"some project"/*project_name_placeholder*/;
-var graphName = "Files in the same commit";
+var graphName = "Files changed in the same commit";
 
 
 createForcesGraphOn("files-in-the-same-commit", filesInTheSameCommitGraph, projectName);
