--- a/templates/time-between-commits-histogram.html
+++ b/templates/time-between-commits-histogram.html
@@ -21,6 +21,7 @@
         shape-rendering: crispEdges;
     }
 </style>
+<head><title>Time between commits histogram</title></head>
 <body>
 <span id="time-between-commits-histogram"></span>
 <script src="d3.v3.min.js"></script>
