fix in removeChildrenOf(elementId) (was broken; this is to able to save visualisations as standalone files)

--- a/templates/files-in-same-commit-graph.html
+++ b/templates/files-in-same-commit-graph.html
@@ -494,8 +494,9 @@ function createForcesGraphOn(elementId, graph, projectName) {
 
     function removeChildrenOf(elementId) {
         var element = document.getElementById(elementId);
-        for (var i = 0; i < element.children.length; i++) {
-            parent.removeChild(element.children.item(i));
+        while (element.children.length > 0) {
+            var child = element.children.item(0);
+            child.parentNode.removeChild(child);
         }
     }
 }
