--- a/templates/changes-size-chart.html
+++ b/templates/changes-size-chart.html
@@ -480,8 +480,9 @@ date,changeSize\n\
 
         function removeChildrenOf(elementId) {
             var element = document.getElementById(elementId);
-            for (var i = 0; i < element.children.length; i++) {
-                parent.removeChild(element.children.item(i));
+            while (element.children.length > 0) {
+                var child = element.children.item(0);
+                child.parentNode.removeChild(child);
             }
         }
     }
