--- a/templates/commit-time-punchcard.html
+++ b/templates/commit-time-punchcard.html
@@ -481,8 +481,9 @@ dayOfWeek,hour,minute,value\n\
 
         function removeChildrenOf(elementId) {
             var element = document.getElementById(elementId);
-            for (var i = 0; i < element.children.length; i++) {
-                parent.removeChild(element.children.item(i));
+            while (element.children.length > 0) {
+                var child = element.children.item(0);
+                child.parentNode.removeChild(child);
             }
         }
     }
