--- a/templates/treemap.html
+++ b/templates/treemap.html
@@ -245,8 +245,9 @@
 
         function removeChildrenOf(elementId) {
             var element = document.getElementById(elementId);
-            for (var i = 0; i < element.children.length; i++) {
-                parent.removeChild(element.children.item(i));
+            while (element.children.length > 0) {
+                var child = element.children.item(0);
+                child.parentNode.removeChild(child);
             }
         }
     }
