--- a/templates/wordcloud.html
+++ b/templates/wordcloud.html
@@ -211,6 +211,8 @@
         var height = 700;
 
         var rootElement = d3.select("#" + elementId);
+        removeChildrenOf(elementId);
+
         var header = appendBlockElementTo(rootElement, width);
         header.append("h2").text("Commit messages word cloud (" + projectName + ")")
                 .style("text-align", "center")
@@ -291,6 +293,14 @@
         function appendBlockElementTo(element, width) {
             return element.append("span")
                     .style("display", "block").style("width", width + "px");
+        }
+
+        function removeChildrenOf(elementId) {
+            var element = document.getElementById(elementId);
+            while (element.children.length > 0) {
+                var child = element.children.item(0);
+                child.parentNode.removeChild(child);
+            }
         }
     }
 </script>
